k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-microservice
spec:
  selector:
    app: cart-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: LoadBalancer
